k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hapi
  name: hapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hapi
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: hapi
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: ${DOCKER_REGISTRY}/${IMAGE_NAME}:${VERSION}
          name: hapi
          ports:
            - containerPort: 3005
