k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hapi-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-methods: '*'
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/add-base-url: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - racsa.tech
        - '*.racsa.tech'
      secretName: tls-secret
  rules:
    - host: ${ENVIRONMENT_PREFIX}hapi.racsa.tech
      http:
        paths:
          - path: /
            backend:
              serviceName: hapi
              servicePort: 3005
